# sbpf-ir-fuzzer

./: Cargo.toml  README.md  fuzz_loop.py  setup.sh
examples/: generated_programs_demo.rs  ir_disasm_bridge.rs  sbpf_ir_roundtrip.rs
input_corpus/: 000_v0_div32_imm.ir  000_v0_div32_reg.ir  001_v0_div64_imm.ir  001_v0_div64_reg.ir  002_v0_mod32_imm.ir  002_v0_mod32_reg.ir  003_v0_mod64_imm.ir  003_v0_mod64_reg.ir  004_v0_div32_imm.ir  004_v0_div32_reg.ir  005_v0_div64_imm.ir  005_v0_div64_reg.ir  006_v0_mod32_imm.ir  006_v0_mod32_reg.ir  007_v0_mod64_imm.ir  007_v0_mod64_reg.ir  008_v0_div32_imm.ir  008_v0_div32_reg.ir  009_v0_div64_imm.ir  009_v0_div64_reg.ir  010_v0_mod32_imm.ir  010_v0_mod32_reg.ir  011_v0_mod64_imm.ir  011_v0_mod64_reg.ir  012_v0_div32_imm.ir  012_v0_div32_reg.ir  013_v0_mod32_imm.ir  013_v0_mod32_reg.ir  014_v0_mod64_imm.ir  014_v0_mod64_reg.ir  015_v0_mul32_imm.ir  015_v0_mul32_reg.ir  016_v0_mul64_imm.ir  016_v0_mul64_reg.ir  017_v0_mul32_imm.ir  017_v0_mul32_reg.ir  018_v0_mul64_imm.ir  018_v0_mul64_reg.ir  019_v0_mul64_imm.ir  019_v0_mul64_reg.ir  (+266 more)
python/: sbpf_ir_shell.py
src/: executor.rs  gen_corpus.rs  gen_jit_stress.rs  gen_pqr.rs  gen_smart.rs  generator.rs  ir.rs  lib.rs  lowering.rs  main.rs  mutator.rs  validate.rs
tests/: tool_api.rs  validation_and_lowering.rs
